Fix scrollbars gutter on blackboard

--- a/pineBTeditor/src/components/blackboard-drawer.less
+++ b/pineBTeditor/src/components/blackboard-drawer.less
@@ -1,6 +1,11 @@
 .blackboard-drawer {
     &__body {
         padding-bottom: 128px !important;
+        overflow-y: overlay !important;
+    }
+
+    &__entry-list {
+        margin-right: 16px;
     }
 
     &__add-entry-button {
